--- a/MIT_iTraker/mit_itraker训练_V3.ipynb
+++ b/MIT_iTraker/mit_itraker训练_V3.ipynb
@@ -75,7 +75,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with tf.name_scope('MIT_Model'):\n",
@@ -157,7 +159,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cal_le=np.vstack((cla_data_tr['left_eye'],cla_data_val['left_eye']))\n",
@@ -187,7 +191,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "tr_left_eye.shape,val_left_eye.shape"
@@ -196,7 +202,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model._initweight()"
@@ -220,6 +228,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -276,7 +285,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "saver=tf.train.Saver()\n",
@@ -450,7 +461,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fps=10\n",
@@ -480,6 +493,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -593,7 +607,8 @@
     "import interface\n",
     "import os\n",
     "import numpy as np\n",
-    "import pickle"
+    "import pickle\n",
+    "import time\n"
    ]
   },
   {
@@ -619,23 +634,26 @@
     "        #确保画面中只有一个人脸识别出来\n",
     "        if(len(faces)!=1):\n",
     "            return None\n",
+    "     \n",
     "        for (x,y,w,h) in faces:\n",
-    "            cv2.rectangle(img,(x-10,y-10),(x+w+10,y+h+10),(255,0,0),2)\n",
-    "            roi_gray = gray[y:y+h, x:x+w]\n",
+    "            #cv2.rectangle(img,(x-10,y-10),(x+w+10,y+h+10),(255,0,0),2)\n",
+    "            #roi_gray = gray[y:y+h, x:x+w]\n",
     "            roi_color = img[y:y+h, x:x+w]\n",
-    "            #保存脸部图像\n",
-    "            face_mat=roi_color.copy()\n",
-    "            #检测视频中脸部的眼睛，并用vector保存眼睛的坐标、大小（用矩形表示）\n",
-    "            eyes = eye_cascade.detectMultiScale(roi_gray,scaleFactor=1.1, minNeighbors=5, minSize=(27, 27),\n",
-    "                                                flags=cv2.CASCADE_SCALE_IMAGE)\n",
-    "            if len(eyes)!= 2:\n",
-    "                return None\n",
+    "#             #保存脸部图像\n",
+    "            face_mat=roi_color\n",
+    "#             #检测视频中脸部的眼睛，并用vector保存眼睛的坐标、大小（用矩形表示）\n",
+    "#             eyes = eye_cascade.detectMultiScale(roi_gray,scaleFactor=1.1, minNeighbors=5, minSize=(27, 27),\n",
+    "#                                                 flags=cv2.CASCADE_SCALE_IMAGE)\n",
+    "            \n",
+    "#             if len(eyes)!= 2:\n",
+    "#                 return None\n",
     "            eye_mat=[]\n",
-    "            for e in eyes:\n",
-    "                xe,ye,we,he=e\n",
-    "                eye_mat.append(face_mat[ye:ye+he,xe:xe+we])\n",
-    "                cv2.rectangle(roi_color,(xe-3,ye-3),(xe+we+3,ye+he+3),(0,0,255),2)\n",
-    "        return  (img,face_mat,eye_mat)"
+    "#             for e in eyes:\n",
+    "#                 xe,ye,we,he=e\n",
+    "#                 eye_mat.append(face_mat[ye:ye+he,xe:xe+we])\n",
+    "                #cv2.rectangle(roi_color,(xe-3,ye-3),(xe+we+3,ye+he+3),(0,0,255),2)\n",
+    "        return  (img,face_mat,eye_mat)\n",
+    "       "
    ]
   },
   {
@@ -666,7 +684,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "img_names[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#打乱顺序\n",
+    "index=np.arange(len(img_names))\n",
+    "np.random.shuffle(index)\n",
+    "img_names=list(np.array(img_names)[index])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "img_names[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "len(img_names)"
@@ -681,45 +737,57 @@
    },
    "outputs": [],
    "source": [
-    "#array([ 1.70154929, -1.93875003], dtype=float32) 标签格式\n",
+    "\n",
     "y_cordinate=[]\n",
     "left_eye=[]\n",
     "right_eye=[]\n",
     "face_matrix=[]\n",
-    "for f in img_names:\n",
-    "    #x_,y_=f[:-4].split('_')[-2:]\n",
-    "    #x_,y_=int(x_[-1]),int(y_[-1])\n",
+    "fail_counter=0\n",
+    "s_time=time.time()\n",
+    "for i,f in enumerate(img_names):\n",
     "    lable_id=int(f[:-4].split('_')[-1])\n",
     "    img=cv2.imread(os.path.join(file_root,f))\n",
     "    face_op=drew_face_eye(img)\n",
     "    if face_op == None:\n",
-    "        #print('fail')\n",
+    "        fail_counter+=1\n",
     "        continue\n",
-    "    img_,f,e=face_op\n",
+    "    _,f,_=face_op\n",
     "    lable_=[0]*16\n",
     "    lable_[lable_id]=1\n",
     "    y_cordinate.append(lable_)\n",
+    "    if i==0:\n",
+    "        face_matrix.append(cv2.resize(f,(229,229)))\n",
+    "        face_matrix=np.array(face_matrix).astype('uint8')\n",
+    "        print(face_matrix.shape)\n",
+    "    else:\n",
+    "        face_matrix=np.vstack((face_matrix,cv2.resize(f,(229,229)).astype('uint8').reshape((1,229,229,3))))\n",
+    "        \n",
     "    #print(lable_)\n",
-    "    left_eye.append(cv2.resize(e[0],(64,64)))\n",
-    "    right_eye.append(cv2.resize(e[1],(64,64)))\n",
-    "    face_matrix.append(cv2.resize(f,(64,64)))\n",
-    "    #cv2.imshow('asd',img_)\n",
-    "    if cv2.waitKey(1)&0xff == 27:\n",
+    "    #left_eye.append(cv2.resize(e[0],(64,64)))\n",
+    "    #right_eye.append(cv2.resize(e[1],(64,64)))\n",
+    "    #face_matrix.append(cv2.resize(f,(64,64)))\n",
+    "    \n",
+    "    #实验 只用一张脸（229*229*3）在inceptionV3上的效果 \n",
+    "    #face_matrix.append(cv2.resize(f,(229,229)))\n",
+    "    if i%1000==0:\n",
+    "        print('pic:{},fail count:{},run time:{}'.format(i,fail_counter,time.time()-s_time))\n",
+    "       # s_time=time.time()\n",
+    "    if i==20000:\n",
     "        break\n",
-    "cv2.destroyAllWindows()\n",
-    "y_cordinate=np.array(y_cordinate).astype('float32')\n",
     "\n",
-    "left_eye=np.array(left_eye)\n",
-    "left_eye=left_eye.astype('float32')-np.mean(left_eye,0)\n",
-    "left_eye/=255.0\n",
+    "y_cordinate=np.array(y_cordinate).astype('uint8')\n",
     "\n",
-    "right_eye=np.array(right_eye)\n",
-    "right_eye=right_eye.astype('float32')-np.mean(right_eye,0)\n",
-    "right_eye/=255.0\n",
+    "# left_eye=np.array(left_eye)\n",
+    "# left_eye=left_eye.astype('float32')-np.mean(left_eye,0)\n",
+    "# left_eye/=255.0\n",
     "\n",
-    "face_matrix=np.array(face_matrix)\n",
-    "face_matrix=face_matrix.astype('float32')-np.mean(face_matrix,0)\n",
-    "face_matrix/=255.0\n",
+    "# right_eye=np.array(right_eye)\n",
+    "# right_eye=right_eye.astype('float32')-np.mean(right_eye,0)\n",
+    "# right_eye/=255.0\n",
+    "\n",
+    "# face_matrix=np.array(face_matrix)\n",
+    "# face_matrix=face_matrix.astype('float32')-np.mean(face_matrix,0)\n",
+    "# face_matrix/=255.0\n",
     "\n"
    ]
   },
@@ -731,7 +799,61 @@
    },
    "outputs": [],
    "source": [
-    "pickle_dataname=''\n",
+    "face_matrix.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "np.save(r'D:\\Proj_DL\\Code\\Proj_EyeTraker\\Proj_iTraker\\Transfer_iTraker\\face_10k.npy',face_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "mean_dict={'face':np.mean(face_matrix,0),'left_eye':np.mean(left_eye,0),'right':np.mean(right_eye,0),\n",
+    "          'label':y_cordinate.astype('uint8')}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "np.save('filenpy/yandmean.npy',mean_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pickle_dataname='caldata50k_1023.pkl'\n",
     "#保存 方差为 1 ，均值为 0 的数据\n",
     "cal_data={}\n",
     "cal_data['face']=face_matrix\n",
